Fix higlight behind text in modals

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -223,6 +223,7 @@ input[type="range"]::-ms-fill-upper {
 /* ref: https://alvarotrigo.com/blog/css-highlight-text/ */
 strong {
     position: relative;
+    z-index: 1;
 }
 strong::before {
     /* Highlight color */
